--- a/AtMostK.cabal
+++ b/AtMostK.cabal
@@ -31,3 +31,4 @@ executable AtMostK
   other-modules:        Base
                       , Binomial
                       , Binary
+                      , Counter
