--- a/AtMostK.cabal
+++ b/AtMostK.cabal
@@ -18,7 +18,6 @@ executable AtMostK
   hs-source-dirs:      src
   main-is:             Main.hs
   default-language:    Haskell2010
-  build-depends:       base >= 4.7 && < 5
   ghc-options:         -Wall
                        -Wcompat
                        -Widentities
@@ -35,3 +34,6 @@ executable AtMostK
                       , Commander
                       , Product
                       , Approximate
+  build-depends:       base >= 4.7 && < 5
+                     , directory
+                     , filepath
