--- a/AtMostK.cabal
+++ b/AtMostK.cabal
@@ -37,3 +37,4 @@ executable AtMostK
   build-depends:       base >= 4.7 && < 5
                      , directory
                      , filepath
+                     , random
