--- a/ApproximateAtMostK.cabal
+++ b/ApproximateAtMostK.cabal
@@ -36,6 +36,7 @@ executable ApproximateAtMostK
                       , Encoding
                       , Evaluation
                       , Problem
+                      , Statistics
   build-depends:       base >= 4.7 && < 5
                      , directory
                      , filepath
